--- a/Domestic Violence Pizza App/Domestic Violence Pizza App/Base.lproj/Main.storyboard
+++ b/Domestic Violence Pizza App/Domestic Violence Pizza App/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KMK-1T-Dfv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="Yvh-OR-iiY">
+            <objects>
+                <navigationController id="KMK-1T-Dfv" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mSu-XE-gRd">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="exf-NC-eXo"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L7z-xO-2os" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-943" y="125"/>
+        </scene>
         <!--StartingView-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -25,14 +41,34 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="awp-nF-ILQ">
+                                <rect key="frame" x="16" y="596" width="343" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.18823529410000001" green="0.65098039220000004" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="25"/>
+                                <state key="normal" title="Next: Crust Type">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="MFW-tv-FaP" kind="push" id="JVq-AS-9Yx"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="7Ze-62-Tab">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="GX6-44-w9V">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="2MZ-go-8aB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-215.19999999999999" y="125.4872563718141"/>
+            <point key="canvasLocation" x="-215" y="125"/>
         </scene>
         <!--CrustView-->
         <scene sceneID="Q1S-ZO-S6Z">
@@ -66,7 +102,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="WGy-BG-bvv"/>
                     </view>
-                    <navigationItem key="navigationItem" id="M7P-sJ-v0F"/>
+                    <navigationItem key="navigationItem" id="M7P-sJ-v0F">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="dxm-8P-Wab">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="vKi-Ji-hlp"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G3k-Ka-VPA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -137,16 +179,22 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="0pw-SX-IGK"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Mqc-83-fmG"/>
+                    <navigationItem key="navigationItem" id="Mqc-83-fmG">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="gcf-pL-tNT">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="1pk-85-cLx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eav-aL-yQx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="528.79999999999995" y="805.54722638680664"/>
         </scene>
-        <!--View Controller-->
+        <!--InformationPage-->
         <scene sceneID="5jl-t2-o9y">
             <objects>
-                <viewController id="HDS-37-IxR" sceneMemberID="viewController">
+                <viewController title="InformationPage" id="HDS-37-IxR" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nGv-hp-Uky">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -323,6 +371,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="9DR-nZ-78Z"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Zz9-8s-Ctz"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ga1-mb-IgB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -331,7 +380,7 @@
         <!--SizeView-->
         <scene sceneID="ckQ-gL-zZw">
             <objects>
-                <viewController id="MFW-tv-FaP" userLabel="SizeView" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Size View" title="Size View" id="MFW-tv-FaP" userLabel="SizeView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5Y5-FP-20j">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -388,6 +437,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="lCn-3l-4u9"/>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="VHy-vM-Aw9">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="CKg-CN-axk">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="Zdn-8u-cVa"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="89k-nk-ecm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -425,7 +483,13 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="Dfp-5E-6PI"/>
                     </view>
-                    <navigationItem key="navigationItem" id="j9i-Sj-mFl"/>
+                    <navigationItem key="navigationItem" id="j9i-Sj-mFl">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="qBW-eV-uww">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="19M-rt-HWw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B1N-8f-qDb" sceneMemberID="firstResponder"/>
             </objects>
@@ -463,7 +527,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="C7j-3q-c5E"/>
                     </view>
-                    <navigationItem key="navigationItem" id="qmv-S3-vDk"/>
+                    <navigationItem key="navigationItem" id="qmv-S3-vDk">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="5Jg-cb-uG1">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="IAD-uU-jLX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tn5-O2-AWU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -501,7 +571,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ItI-zY-ZCF"/>
                     </view>
-                    <navigationItem key="navigationItem" id="clU-Wc-Kcb"/>
+                    <navigationItem key="navigationItem" id="clU-Wc-Kcb">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="ogM-dA-aMu">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="i7t-du-aPZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7i1-dW-LbU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -539,7 +615,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="DAq-xs-5PI"/>
                     </view>
-                    <navigationItem key="navigationItem" id="MI6-MV-hhh"/>
+                    <navigationItem key="navigationItem" id="MI6-MV-hhh">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="CKi-6J-h7h">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="NAw-4n-RmO"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uK2-CG-pvh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -561,7 +643,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qzF-sU-lP1">
-                                <rect key="frame" x="16" y="596" width="343" height="51"/>
+                                <rect key="frame" x="16" y="572" width="343" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.18823529410000001" green="0.65098039220000004" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="25"/>
@@ -577,7 +659,13 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="vUT-tj-A7f"/>
                     </view>
-                    <navigationItem key="navigationItem" id="QOH-C3-10j"/>
+                    <navigationItem key="navigationItem" id="QOH-C3-10j">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="KTo-yY-nz2">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="f6k-rM-QYM"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d3e-xN-SaL" sceneMemberID="firstResponder"/>
             </objects>
@@ -592,7 +680,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address Page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O6e-o7-ubF">
-                                <rect key="frame" x="166" y="73" width="106" height="21"/>
+                                <rect key="frame" x="134" y="64" width="106" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -602,11 +690,23 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="T7B-bB-M0g"/>
                     </view>
-                    <navigationItem key="navigationItem" id="pdu-Oe-UhH"/>
+                    <navigationItem key="navigationItem" id="pdu-Oe-UhH">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="untitled.png" id="2UY-UD-eKc">
+                            <connections>
+                                <segue destination="HDS-37-IxR" kind="push" id="wnI-Rl-hZk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pBI-9u-l7T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="529" y="2848"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="untitled.png" width="30" height="30"/>
+    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="1pk-85-cLx"/>
+    </inferredMetricsTieBreakers>
 </document>
